Fix T43696: Baking tearing normals

Patch D1207 by @chrisr